[0.3] Enforce the checkstyle when test and compile. (#1191)
**PR Checklist**

- [x] A description of the changes is added to the description of this
PR.
- [x] If there is a related issue, make sure it is linked to this PR.
- [x] If you've fixed a bug or added code that should be tested, add
tests!
- [x] If you've added or modified a feature, documentation in `docs` is
updated

**Description of changes**

Backport https://github.com/unitycatalog/unitycatalog/pull/1128 and
https://github.com/unitycatalog/unitycatalog/pull/1095 to the branch-0.3

The whole progress of backport is here:
https://github.com/unitycatalog/unitycatalog/issues/1163

---------

Signed-off-by: Zheng Hu <openinx@gmail.com>